zerocopy-derive/tests/ui-nightly/trivial_bounds.stderr
error[E0277]: the trait bound `FromBytes1: FromZeroes` is not satisfied
  --> tests/ui-nightly/trivial_bounds.rs:55:10
   |
55 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromZeroes` is not implemented for `FromBytes1`
   |
   = help: the following other types implement trait `FromZeroes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `FromBytes`
  --> $WORKSPACE/src/lib.rs
   |
   | pub unsafe trait FromBytes: FromZeroes {
   |                             ^^^^^^^^^^ required by this bound in `FromBytes`
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
